--- a/charts/cp-kafka/values.yaml
+++ b/charts/cp-kafka/values.yaml
@@ -38,7 +38,7 @@ configurationOverrides:
   "offsets.topic.replication.factor": "3"
   # "default.replication.factor": 3
   # "min.insync.replicas": 2
-  # "auto.create.topics.enable": false
+  "auto.create.topics.enable": true
 
   ## Options required for external access via NodePort
   ## ref:
