--- a/examples/avro-client.yaml
+++ b/examples/avro-client.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: avro-client
-  namespace: default
+  namespace: kafka
 spec:
   containers:
   - name: avro-client
