--- a/examples/zookeeper-client.yaml
+++ b/examples/zookeeper-client.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: zookeeper-client
-  namespace: default
+  namespace: kafka
 spec:
   containers:
   - name: zookeeper-client
