1. metrics: prom added to use as a selector for only kafka services to collect metrics from prometheues 2. yahoo-kafka-manager added for monitoring kafka cluster 3. Deployment.md added for documentation of deploying the services to kubernetes

--- a/charts/cp-kafka/templates/service.yaml
+++ b/charts/cp-kafka/templates/service.yaml
@@ -7,6 +7,7 @@ metadata:
     chart: {{ template "cp-kafka.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
+    metrics: prom
 spec:
   ports:
     - port: 9092
