--- a/charts/cp-kafka-rest/templates/service.yaml
+++ b/charts/cp-kafka-rest/templates/service.yaml
@@ -7,6 +7,7 @@ metadata:
     chart: {{ template "cp-kafka-rest.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
+    metrics: prom
 spec:
   ports:
     - name: rest-proxy
