--- a/charts/cp-schema-registry/templates/service.yaml
+++ b/charts/cp-schema-registry/templates/service.yaml
@@ -7,6 +7,7 @@ metadata:
     chart: {{ template "cp-schema-registry.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
+    metrics: prom
 spec:
   ports:
     - name: schema-registry
