--- a/charts/cp-zookeeper/templates/service.yaml
+++ b/charts/cp-zookeeper/templates/service.yaml
@@ -7,6 +7,7 @@ metadata:
     chart: {{ template "cp-zookeeper.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
+    metrics: prom
 spec:
   type: {{ .Values.serviceType }}
   ports:
