--- a/yahoo-kafka-manager/kafka-manager-service.yml
+++ b/yahoo-kafka-manager/kafka-manager-service.yml
@@ -4,9 +4,10 @@ metadata:
   name: kafka-manager
   namespace: kafka
 spec:
+  type: LoadBalancer
   selector:
     app: kafka-manager
   ports:
   - protocol: TCP
-    port: 80
-    targetPort: 80
+    port: 9000
+    targetPort: 9000
