--- a/charts/cp-kafka/values.yaml
+++ b/charts/cp-kafka/values.yaml
@@ -39,6 +39,7 @@ configurationOverrides:
   # "default.replication.factor": 3
   # "min.insync.replicas": 2
   "auto.create.topics.enable": true
+  "delete.topic.enable": true
 
   ## Options required for external access via NodePort
   ## ref:
