--- a/charts/cp-kafka/values.yaml
+++ b/charts/cp-kafka/values.yaml
@@ -35,21 +35,23 @@ updateStrategy: RollingUpdate
 ## Kafka Server properties
 ## ref: https://kafka.apache.org/documentation/#configuration
 configurationOverrides:
-  "offsets.topic.replication.factor": "3"
+  "offsets.topic.replication.factor": "1"
   # "default.replication.factor": 3
   # "min.insync.replicas": 2
   "auto.create.topics.enable": true
   "delete.topic.enable": true
 
-  ## Options required for external access via NodePort
-  ## ref:
-  ## - http://kafka.apache.org/documentation/#security_configbroker
-  ## - https://cwiki.apache.org/confluence/display/KAFKA/KIP-103%3A+Separation+of+Internal+and+External+traffic
-  ##
-  ## Advertised listeners will use the firstListenerPort value as it's default unless overridden here.
-  ## Setting "advertised.listeners" here appends to "PLAINTEXT://${POD_IP}:9092,"
+  # Options required for external access via NodePort
+  # ref:
+  # - http://kafka.apache.org/documentation/#security_configbroker
+  # - https://cwiki.apache.org/confluence/display/KAFKA/KIP-103%3A+Separation+of+Internal+and+External+traffic
+  #
+  # Advertised listeners will use the firstListenerPort value as it's default unless overridden here.
+  # Setting "advertised.listeners" here appends to "PLAINTEXT://${POD_IP}:9092,"
   # "advertised.listeners": |-
   # EXTERNAL://${HOST_IP}:$((31090 + ${KAFKA_BROKER_ID}))
+  "advertised.listeners": |-
+   EXTERNAL://kafka${KAFKA_BROKER_ID}.zenatix.com:$((31090 + ${KAFKA_BROKER_ID}))
   "listener.security.protocol.map": |-
    PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT
 
@@ -122,7 +124,7 @@ prometheus:
     resources: {}
 
 nodeport:
-  enabled: false
+  enabled: true
   servicePort: 19092
   firstListenerPort: 31090
 
