--- a/yahoo-kafka-manager/kafka-manager-service.yml
+++ b/yahoo-kafka-manager/kafka-manager-service.yml
@@ -4,7 +4,7 @@ metadata:
   name: kafka-manager
   namespace: kafka
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector:
     app: kafka-manager
   ports:
